--- a/scene/two/the-forest-behind-the-trees/index.html
+++ b/scene/two/the-forest-behind-the-trees/index.html
@@ -276,9 +276,11 @@
         <h3 class="linebreak">The Trees</h3>
         <p><em>We need to plant trees. We need to make sure that trees grow. And making sure that trees grow is more complicated than planting them.</em></p>
 
-        <p class="linebreak">However this is an economic and a political problem, not a technical problem of planting trees. The economics of industrial forestry have been myopic and only look like good business on paper &ndash; so to speak. In practice, and in policy, the environmental costs have been overlooked.</p>
+        <p class="linebreak">The problem however is with the economics and politics, not the logistics of planting trees. There is a problem with the extractive, myopic economic models of industrial aggriculture and industrial forestry and so on. And then there is the problem where in practice, and in policy, the environmental costs are too often overlooked.</p>
 
-        <p class="linebreak">Our best action is to stop cutting down the healthy forests that we have left. This means our law enforcement needs to put an end to illegal logging, and we need to boycott the companies that are driving deforestation. Also, we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a culture of being stewards of the natural world. And where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
+        <!-- that has only looked like good business on paper &ndash; so to speak -->
+
+        <p class="linebreak">Our best step forward is to stop cutting down the healthy forests that we have left. This means law enforcement needs to put and end to illegal logging, and consumers with purchasing power need to boycott the companies that are driving deforestation. Also, we &ndash; and our political representatives &ndash; need to steward the rights of Indigenous peoples who have a history of being stewards of the natural world. And where there is opportunity for reforestation, local communities need to see benefits from any new forests because they will need to be invested in keeping those trees growing.</p>
 
       </div>
 
