--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -68,8 +68,6 @@
 
         <p class="linebreak">Elephant tusks are teeth, too. Elephant tusks are in fact incisors, which begin to grow after a calf has reached about a year of age. Then, for the rest of the life of an elephant, elephant tusks do not stop growing.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
-        <!-- The only other creature to have ivory teeth is the walrus. ...hippo, wild boar. -->
-
         <p class="linebreak">Much of the tusk is made up of a hard, dense, bone tissue called dentin. This is wrapped in enamel, which is the hardest animal tissue, and which is the part of the tusk that manages the most wear. Elephant tusks are of course also classified as ivory.</p>
 
         <p class="linebreak">The tusks of an elephant bull will grow much larger than the elephant cow. An elephant bull with at least one tusk weighing in excess of 100 pounds is classified as a super-tusker. Each tusk can grow to two metres in length and, for some super-tuskers, up to about 200 pounds in weight in the course of a lifetime. Today, there are little more than twenty super-tuskers left on Earth, and their tusks do not exceed 150 pounds.<sup>&nbsp;[<a class="button" onclick="fn();" title="Currie, 2018">2</a>]</sup></p>
@@ -80,19 +78,6 @@
 
       </div>
 
-<!-- Body and Mind, Steve Bloom
-
-Elephants have their own built-in-air-conditioning systems, and cool by flapping each year like a fan. As the day cruise hotter, the tempo increases.
-When it is windy, they save energy by standing with their backs to the grease and spread out their ears to catch the moving air.
-
-The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.
-
-Wild elephants are under huge pressure from an expanding human population that has squeezed them into smaller and smaller reserves, encroaching on habitat and breaking up traditional migratory routes.
-
-Periodically adult male elephants enter the state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain, attacking randomly. Body temperatures rise, and they flap their ears frequently to keep a cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight, including humans, and the danger of such a state should never be underestimated. In the wild, musth Helps the elephant to maintain his dominant position and meet with females who are in season.
-
-In normal elephant society, a matriarch is in control of the group, passing on survival skills to the young. Juvenile males are taught how to deal with the range of situations, and stay with her until adolescence. At this stage: they generally leave the herd and attach themselves to order bowls who, by example, guide them into the ways of adulthood. Musth May appear in younger bowls for short periods, but his suppressed in the presence of older, more dominant males. Without these Dominic males, must may become uncontrollable and completely take over the behavior of young bulls. -->
-
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><em>An elephant's appetite is prodigious. They eat roughly four percent of their body weight each day, so a five tonne elephant will eat some 200 kilograms of vegetation. A natural consequence of this is the production of copious quantities of dung &ndash; on average each elephant produces roughly one tonne of natural organic manure every week, packed with nutrients, that feeds countless insects and enriches the soil of their habitat. When they have been feeding on fruits or pods, their dung is also packed with seeds, all deposited miles from the parent plant and protected from weevils and other seed predators. in so doing, elephants effectively sow the next generation of trees, each seedling getting a good start in life growing in rich compost. Trees with small seeds can also have them dispersed by fruit-eating birds, primates and antelopes, but those species with big seeds need big seed-dispersal agents. Elephants disperse more seeds and more species, over longer distances, than any other animal. This is why ecologists have dubbed them the &lsquo;mega-gardeners of the forest&rsquo;.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Ian Redmond Obe, Ambassador for UNEP Convention on Migratory Species, Consultant for Born Free Foundation, <em>Remembering Elephants</em> (book, 2016), Envisage Books</font></h4>
 
@@ -102,30 +87,46 @@ In normal elephant society, a matriarch is in control of the group, passing on s
       </div>
 
       <div>
-        <h3>What's in the Trunk?</h3>
+        <h3 class="linebreak">What's in the Trunk?</h3>
         <p>An elephant trunk is an extension of the upper lip and nose. This highly adapted olfactory organ has nostrils at the tip through which the elephant can breath, has a highly developed sense of smell, and does a hell of a lot more.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
         <p class="linebreak">Elephants have more than forty <s>up to 150</s> thousand muscles in their trunk. An elephant trunk, or proboscis, for which the order of the elephantidae family genus &ndash; proboscidea &ndash; is named, contains sixteen larger muscles for major movements, such as raising the trunk. Thousands of smaller muscle fascicles, or bundles of muscle fibres, allow for finer movements of the trunk. African elephants have two finger-like projections at the tip of the trunk, which they can use to pick grass, leaves and fruit.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
-        <!-- This is similar to that of their ancient ancestors, the mammoth and mastodon and so on, with a large muscle on the top and sides of the trunk, which allows an elephant to raise it. -->
-
         <p class="linebreak">Elephants use their trunk to skim water holes for the clearer water settled at the surface. Elephants can contain about six to twelve litres of water in their trunk at a time, then spout the water into their mouths or otherwise. Elephants also use their trunk to shower themselves with dust and mud and so on. This provides an effective sun-block that protects from ultraviolet rays and from parasites. Elephants use their trunk to collect vegetation and to uproot trees, as well as to interact and to communicate with others through smell, sound and touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
-        <!-- The trunk can be raised as a snorkel in water passages, and directed finely toward the source of a scent. -->
+      </div>
 
-        <p class="linebreak">Elephants use their trunk to test unsteady or unfamiliar terrain, by using the outside of the trunk to beat the ground to determine if it is firm enough to walk on. Once determined to be safe, the elephant will step with a front foot onto the tested area. A rear foot follows and is carefully placed in exactly the same footprint. Elephants will also beat the ground with their trunk to signal anger or displeasure.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
+      <div class="color quote">
+        <h4><font class="color text-quote">&ldquo;</font><em>The trunk is a masterpiece, a complex fusion of hand, lip and nose with a multitude of functions. It can fell trees, lift heavy logs, blow torrents of water, trumpet loudly, or delicately pick up a single seed. A super-sensitive, telescopic antenna, it rises high into the air to smell for danger, and can also be used as an effective weapon. A trunk can reach seemingly impossible places, remove grit from the eye, and be used to caress and give comfort.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+
+      </div>
+
+      <div>
+        <p>Elephants use their trunk to test unsteady or unfamiliar terrain, by using the outside of the trunk to beat the ground to determine if it is firm enough to walk on. Once determined to be safe, the elephant will step with a front foot onto the tested area. A rear foot follows and is carefully placed in exactly the same footprint. Elephants will also beat the ground with their trunk to signal anger or displeasure.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
         <h3 class="linebreak">Elephant Prints</h3>
         <p>Despite their mass and the massive size of their feet, studies of elephant walking patterns have shown that an elephant walks on his or her toes without making much noise at all, putting the most pressure on the outer toes of the front feet and the least amount of pressure on the heels. Elephant leg bones have no cavity for marrow, instead they are solid bone, which helps to bear the weight of an elephant. Their large round feet spread out as they take a step, which helps to prevent elephants from sinking into the ground and sticking into the mud.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
         <p class="linebreak">Research has shown that elephants can communicate more than five <s>up to twenty</s> miles apart using an infrasonic rumble, which travels through the ground faster than sound through the air. Elephants detect these vibrations with a sponge-like digital cushion in the soles of their feet, and sense the direction based on the signal difference between feet. Elephants have been known to detect a thunderstorm from miles away and head toward the rain.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
-        <h3 class="linebreak">Skin, Ears and Eyes</h3>
+        <h3 class="linebreak">Skin, Skull, Ears and Eyes</h3>
         <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and so on. The wrinkled skin also increases the surface area of the skin in contact with the air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
-        <p class="linebreak">Elephant skin is soft and thin in places as well, in particular over top of a network of veins in the ears. An elephant flapping his or her ears in the air acts to radiate heat from blood in the ears before returning to the body. Elephants will also display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="International Elephant Foundation">6</a>]</sup></p>
+        <p class="linebreak">Elephant skin is soft and thin in places as well, in particular over top of a network of veins in the ears. An elephant fanning his or her ears against the air acts to radiate heat from blood in the ears before returning to the body. As the temperature of the day increases, so does the tempo of the elephant ears. When there is wind, elephants will conserve energy by standing with their rear to the breeze and spreading out their ears to catch the moving air. Elephants will also display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn();" title="International Elephant Foundation">6</a>]</sup></p>
 
-        <!-- They have very good hearing and can hear calls over 2.5 miles away. -->
+        <p class="linebreak">Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when elephants enter into hormonal responses, such as &ldquo;musth&rdquo; as well as highly charged situational stress.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
+
+      </div>
+
+      <div class="color quote">
+        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth. The result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain, attacking randomly. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight, including humans, and the danger of such a state should never be underestimated. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+
+      </div>
+
+      <div>
+        <p>Elephant skin is covered with papillae, with hairs of varying color, length, thickness and all of which makes elephant skin highly sensitive. Elephants of the same herd will often greet each other with touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Laursen and Bekoff, 1978">7</a>]</sup></p>
+
+        <p class="linebreak">The hair of elephant calves has a lighter, red-brown color with a softer texture, then grows darker and more coarse. Elephant hair that grows along the back and tail is flattened and can grow to almost a metre in length. Eyelashes that grow up to five inches long help to shade the eyes from dirt and sand swirling in the desert. Elephants also have three eyelids: upper, lower and one that moves vertically. The vertical eyelid is clear, and protects the eyes while allowing them to see.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
       </div>
 
@@ -133,15 +134,6 @@ In normal elephant society, a matriarch is in control of the group, passing on s
         <h4><font class="color text-quote">&ldquo;</font><em>She gazed down at me. Her ears splayed open in the shape of Africa. Her eyes, kind and concerned.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Daphne Sheldrick, <em>Love, Life and Elephants: An African Love Story</em> (book, 2012), Farrar, Straus and Giroux</font></h4>
 
         <!-- Then, lifting one huge foot, she began to feel me gently, all over, barely touching me. Her great ears stood out at right angles to her huge head, as she contemplated me lying helpless merely inches from the tip of two long sharp tusks. I knew then, that she did not intend to kill me. -->
-
-      </div>
-
-      <div>
-        <p>Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when elephants enter into hormonal responses, such as &ldquo;musth&rdquo; as well as highly charged situational stress.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
-
-        <p class="linebreak">Elephant skin is covered with papillae, with hairs of varying color, length, thickness and all of which makes elephant skin highly sensitive. Elephants of the same herd will often greet each other with touch.<sup>&nbsp;[<a class="button" onclick="fn();" title="Laursen and Bekoff, 1978">7</a>]</sup></p>
-
-        <p class="linebreak">The hair of elephant calves has a lighter, red-brown color with a softer texture, then grows darker and more coarse. Elephant hair that grows along the back and tail is flattened and can grow to almost a metre in length. Eyelashes that grow up to five inches long help to shade the eyes from dirt and sand swirling in the desert. Elephants also have three eyelids: upper, lower and one that moves vertically. The vertical eyelid is clear, and protects the eyes while allowing them to see.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
       </div>
 
@@ -160,6 +152,9 @@ In normal elephant society, a matriarch is in control of the group, passing on s
           <p class="small"><sup>4</sup> Poole, J. Granli, P. How Elephants Communicate. Elephant Voices. <a href="../../../url/-org/elephantvoices-elephant-communication/" title="Elephant Voices /  Elephant Communication" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>5</sup> Poole, J. Granli, P. Elephant Gestures Database. Elephant Voices. <a href="../../../url/-org/elephantvoices/" title="Elephant Voices" target="_blank" rel="noopener">Website Link</a></p>
           <p class="small"><sup>6</sup> Elephants: Interesting Facts. International Elephant Foundation. <a href="../../../url/-org/elephantconservation-facts/" title="IEF / Elephants: Interesting Facts" target="_blank" rel="noopener">Website Link</a></p>
+
+          <!-- Body and Mind, Steve Bloom -->
+
           <p class="small"><sup>7</sup> Laursen, L. Bekoff, M. 1978. Loxodonta africana. <em>Mammalian Species</em> Vol.92: 1-8. <a href="../../../url/doi/10-2307-3503889/" title="Digital Object Identifier / Mammalian Species Vol.92: 1-8" target="_blank" rel="noopener">Website Link</a></p>
 
         </div>
