--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -51,7 +51,7 @@
 
       </div>
 
-      <div class="center">
+      <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/photo/museum-of-natural-history.marseille.elephant-skeleton.jpg" />
         <p class="text-right gutter-side">Elephant skeleton, Museum of Natural History, Marseille</p>
 
@@ -109,6 +109,15 @@
 
         <p class="linebreak">Research has shown that elephants can communicate more than five <s>up to twenty</s> miles apart using an infrasonic rumble, which travels through the ground faster than sound through the air. Elephants detect these vibrations with a sponge-like digital cushion in the soles of their feet, and sense the direction based on the signal difference between feet. Elephants have been known to detect a thunderstorm from miles away and head toward the rain.<sup>&nbsp;[<a class="button" onclick="fn();" title="Poole and Granli, Elephant Voices">4</a>]</sup></p>
 
+      </div>
+
+      <div class="clear">
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
+        <p class="text-right gutter-side">Close-up-of elephants feet disturbing Cape Turtle Doves &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
+
+      </div>
+
+      <div>
         <h3 class="linebreak">Skin, Skull, Ears and Eyes</h3>
         <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and so on. The wrinkled skin also increases the surface area of the skin in contact with the air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
@@ -119,7 +128,16 @@
       </div>
 
       <div class="color quote">
-        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth. The result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain, attacking randomly. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight, including humans, and the danger of such a state should never be underestimated. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+        <h4><font class="color text-quote">&ldquo;</font><em>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <em>Elephants</em> &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
+
+        <!-- attacking randomly -->
+        <!-- , including humans, and the danger of such a state should never be underestimated -->
+
+      </div>
+
+      <div class="clear">
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
+        <p class="text-right gutter-side"> &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
 
@@ -138,7 +156,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/swt.tsavo-02.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
         <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
