--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/nick-brandt/2008.amboseli.elephants-walking-through-grass.219114.jpg" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~nick-brandt/brandt.2008.amboseli.elephants-walking-through-grass.219114.jpg" />
       <p class="text-right gutter-side">&ldquo;Elephants Walking Through Grass&rdquo; Amboseli, 2008 (Leading matriarch killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
@@ -51,7 +51,7 @@
         <p class="linebreak"><em>This project had not yet begun in July 2010 when, coincidentally, wildlife photographer Nick Brandt had returned to Amboseli. For much of the previous decade, Brandt had spent many months following the elephants there and, as a result, had the opportunity to come to know some of them intimately. This was one of those elephants: the image is simply striking. So much so that this image was used as reference for Ella, the model elephant, and was immediately recognized when a story of a pioneering conservation group &ndash; co-founded by a photographer inspired by wildlife in East Africa &ndash; featured photography of a similarly striking style. The name of this elephant was Igor. He lived largely in Amboseli. This photograph was taken in 2007 and indeed the photographer was the very same</em>&mdash;<em>the one and only Nick Brandt, now co-founder of Big Life Foundation. (This iconic image of Igor is a big part of the visual identity of Big Life Foundation.) The one and only Igor was killed by poachers for his ivory in 2009, two years after this photograph was taken. He was 49 years of age.</em><sup>&nbsp;[<a class="button" onclick="fn();" title="Brandt, 2018">1</a>]</sup></p>
 
         <div class="quote">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/photo/nick-brandt/2007.amboseli.elephant-drinking.219393.jpg" />
+          <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~nick-brandt/brandt.2007.amboseli.elephant-drinking.219393.jpg" />
           <p class="text-right gutter-side">&ldquo;Elephant Drinking&rdquo; Amboseli, 2007 (Killed by poachers, 2009) &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
         </div>
@@ -131,7 +131,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/nick-brandt/2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~nick-brandt/brandt.2011.amboseli.line-of-rangers-with-tusks-of-killed-elephants.219252.jpg" />
       <p class="text-right gutter-side">&ldquo;Line of Rangers with Tusks of Killed Elephants&rdquo; Amboseli, 2011 &copy; Nick Brandt [<a href="../../../url/-com/nickbrandt/" target="_blank" title="Nick Brandt">nickbrandt.com</a>]</p>
 
       <div>
