--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/ewb.ele-eyes.jpg" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
       <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       <div>
@@ -133,7 +133,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/ewb.okavango.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.okavango.jpg" />
         <p class="text-right gutter-side">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
@@ -196,7 +196,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/ewb.landscape.1024-357.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
         <p class="text-right gutter-side">Grey Frontiers &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
