--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -322,7 +322,7 @@
 
   <div class="clear color">
     <section class="single">
-      <div class="quote">
+      <div class="quote text-center">
         <h4>White Elephant<font class="thin">&mdash;<em>noun</em>, from stories of the kingdom of Siam (Thailand), </font><font class="color text-quote">&ldquo;</font><font class="thin">a possession of value that's useless and bizarre, too.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;<em>expression</em>, des histoires du royaume de Siam,</font> &laquo;&nbsp;<font class="thin">Une possession de valeur, ainsi inutile et bizarre.</font>&nbsp;&raquo;</font></h4>
 
       </div>
