--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -48,7 +48,7 @@
         <p class="linebreak"><em>From another continent, it is unfair to place a value on such a loss for Kenya and on such widespread biodiversity loss across Africa without also addressing the impact of pollutants emitted and wasted by the rest of the world. This article points to Satao as an ambassador for the crisis facing elephant conservation in Africa, but also to the ways the world can help create change from home.</em></p>
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/mark-deeble/2014.satao.bull-drinking.png" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
       <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
@@ -63,7 +63,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/mark-deeble/2014.satao.dead-and-splayed.png" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~mark-deeble/deeble.2014.satao.dead-and-splayed.png" />
       <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
