--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -153,7 +153,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/bbc.earths-greatest-spectacles.3.okavango.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.earths-greatest-spectacles.3.okavango.jpg" />
         <p class="text-right gutter-side"><em>Earth's Greatest Spectacles</em> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       </div>
