--- a/scene/one/reference-2/index.html
+++ b/scene/one/reference-2/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/oatley-artcast.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/art/oatley.artcast.jpg" />
         <p class="text-right gutter-side"><em>Artcast</em> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
       </div>
 
@@ -68,7 +68,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/woodward-bottom-of-the-ninth.png" /></a>
+        <img alt="" src="https://animathabitat.com/inc/img/~01/art/woodward.bottom-of-the-ninth.png" /></a>
         <p class="text-right gutter-side"><em>Bottom of the Ninth</em> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
@@ -79,7 +79,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/art/disney-the-lion-king-open.jpg" />
+      <img alt="" src="https://animathabitat.com/inc/img/~01/art/~disney-animation/disney.the-lion-king.open.jpg" />
       <p class="text-right gutter-side"><em>The Lion King</em> (1994) &copy; Disney</p>
 
       <div>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/disney-living-desert-vanishing-prairie.png" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/art/disney.living-desert-vanishing-prairie.png" />
         <p class="text-right gutter-side"><em>The Living Desert, The Vanishing Prairie</em> (1971) &copy; Disney</p>
 
         <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
@@ -101,7 +101,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/kley-elephant-dance.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/art/~heinrich-kley/kley.elephant-dance.jpg" />
         <p class="text-right gutter-side"><em>The Drawings of Heinrich Kley</em> (1909, republished 1961), 52.</p>
 
       </div>
