--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="clear">
-        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/ami-vitale/2018.sudan-at-ol-pejeta-conservancy.jpg" />
+        <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
         <p class="text-right gutter-side"><em>A wildlife ranger comforts Sudan moments before he passed away</em>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/ami-vitale/2018.fatu-and-najin-graze.jpg" />
+        <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
         <p class="gutter-side text-right"><em>Fatu and Najin graze</em>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
