--- a/scene/one/elephant-anatomy/index.html
+++ b/scene/one/elephant-anatomy/index.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
+        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
         <p class="text-right gutter-side">Close-up-of elephants feet disturbing Cape Turtle Doves &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
@@ -137,7 +137,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
-        <p class="text-right gutter-side"> &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
+        <p class="text-right gutter-side">Charging bull elephant, Savuti, Botswana &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
 
