--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -98,7 +98,7 @@
 
       </div>
 
-      <img alt="Tomb of Menna" src="https://animathabitat.com/inc/img/~01/comic/~tomb-of-menna.eastwall.jpg" />
+      <img alt="Tomb of Menna" src="https://animathabitat.com/inc/img/~01/comic/tomb-of-menna.eastwall.jpg" />
       <p class="gutter-side text-right">Tomb of Menna &ndash; Ancient Egypt</p>
 
       <div>
