--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -335,12 +335,12 @@
 
         <div class="clear diptych">
           <div class="clear-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~01/art/angela-sheldrick/water-colour.2018.10.jpg" class="trim">
+            <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="trim">
             <p class="text-right">Angela Sheldrick Water Colour, October 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
           </div>
 
           <div class="clear-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~01/art/angela-sheldrick/water-colour.2018.11.jpg" class="trim">
+            <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="trim">
             <p class="text-right">Angela Sheldrick Water Colour, November 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
           </div>
 
